# coductor

./: .gitignore  AGENTS.md  LICENSE  README.md  coductor.example.yaml  coductor.yaml  pyproject.toml
docs/: architecture.md  glossary.md  security.md  web-console-smoke-checklist.md  workflow.md  yaml-contracts.md
docs/adr/: 0001-yaml-as-stage-contract.md  0002-solo-first-execution.md  0003-langgraph-as-orchestrator.md
docs/architecture/: README.md  architecture_inventory.md  coductor-architecture-board.html  coductor-artifact-state-flow.html  coductor-overview.mmd  coductor-runtime-flow.html  coductor-system-overview.html  diagram-1-system-overview.mmd  diagram-2-runtime-flow.mmd  diagram-3-artifact-state-flow.mmd  diagram-content-model.json  diagram-content-model.md  diagram-style-guide.md  diagram.css  generate_diagrams.py
examples/demo-python-project/: README.md  pyproject.toml  test_math_utils.py
schemas/: README.md  evidence_bundle.schema.json  execution_plan.schema.json  gate_report.schema.json  goal.schema.json  goal_satisfaction_report.schema.json  integration.schema.json  repair_request.schema.json  repair_result.schema.json  repository_snapshot.schema.json  review_report.schema.json  specification.schema.json  task.schema.json  tool_request.schema.json  tool_result.schema.json  verification_plan.schema.json  worker_request.schema.json  worker_result.schema.json
scripts/: generate_schemas.py
src/coductor/: __init__.py  cli.py  constants.py  exceptions.py  security.py
tests/e2e/: test_demo_project.py
tests/integration/: test_blocking_review.py  (+14 more)
(+128 files in other folders)
